[project]
name = "my-python"
version = "0.1.0"
description = ""
authors = [
    {name = "wangxuefeng",email = "1592193221@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
